// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Counter Component should render correctly 1`] = `
"<Counter count={5}>
  <div className=\\"Counter\\">
    <h2>
      Você tem 
      5
       counters;
    </h2>
  </div>
</Counter>"
`;

exports[`Testing Counter Component should render correctly 2`] = `
"<Counter count={40}>
  <div className=\\"Counter\\">
    <h2>
      Você tem 
      40
       counters;
    </h2>
  </div>
</Counter>"
`;
